{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 62,
  "lineage": "5f39cb79-ed20-fdde-ff9d-6581783698d2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:711457211368:vpc/vpc-000c5b0e6d9f833ad",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c898ca7ba6148de5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02cfd7adc9fa1b936",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000c5b0e6d9f833ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ad50c558c05b16f",
            "owner_id": "711457211368"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0312744fa3cde1a08",
            "arn": "arn:aws:ec2:ap-south-1:711457211368:elastic-ip/eipalloc-0312744fa3cde1a08",
            "association_id": "eipassoc-07b5bb98e3e8b0caf",
            "domain": "vpc",
            "id": "eipalloc-0312744fa3cde1a08",
            "instance": "i-00d5424955a8f2ead",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05d50144515347f03",
            "private_dns": "ip-172-31-39-35.ap-south-1.compute.internal",
            "private_ip": "172.31.39.35",
            "public_dns": "ec2-65-0-235-167.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.235.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "repath-app"
            },
            "tags_all": {
              "Name": "repath-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_instance.app",
            "aws_security_group.app",
            "data.aws_iam_policy_document.ec2_assume",
            "data.aws_ssm_parameter.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac7b260cf76d8865",
            "arn": "arn:aws:ec2:ap-south-1:711457211368:instance/i-00d5424955a8f2ead",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "repath-ec2-profile",
            "id": "i-00d5424955a8f2ead",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d50144515347f03",
            "private_dns": "ip-172-31-39-35.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.35",
            "public_dns": "ec2-65-0-235-167.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.235.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:711457211368:key/8286b630-3930-415e-bf17-edfc9042432a",
                "throughput": 125,
                "volume_id": "vol-00acc7e53354cfe4e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "repath-app"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029888e6405b8b854",
            "tags": {
              "Name": "repath-app"
            },
            "tags_all": {
              "Name": "repath-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0399bed0313ab2dea"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_security_group.app",
            "data.aws_iam_policy_document.ec2_assume",
            "data.aws_ssm_parameter.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:711457211368:security-group/sg-0399bed0313ab2dea",
            "description": "Gateway/controller/evaluator host - HTTP(S) in, no SSH port open (SSM Session Manager only)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0399bed0313ab2dea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (Caddy redirects to HTTPS)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS (Caddy to gateway :8080)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "repath-app",
            "name_prefix": "",
            "owner_id": "711457211368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "repath-app"
            },
            "tags_all": {
              "Name": "repath-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-000c5b0e6d9f833ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:711457211368:security-group/sg-0e5522ab50f4d528f",
            "description": "Postgres - only reachable from the app host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5522ab50f4d528f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from app host",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0399bed0313ab2dea"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "repath-rds",
            "name_prefix": "",
            "owner_id": "711457211368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "repath-rds"
            },
            "tags_all": {
              "Name": "repath-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-000c5b0e6d9f833ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}